--- a/index.css
+++ b/index.css
@@ -1,7 +1,74 @@
-#timer h1 {
+* {
+    display: border-box;
+}
+
+body {
+}
+
+#div-container {
+    position: relative;
+    text-align: center;
+    border: 5px solid black;
+    padding: 20px;
+    margin: 40px;
+    height: 300px;
+}
+
+@keyframes fade {
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
+
+.hide {
+    display: none;
+}
+
+.animation {
+    opacity: 0;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+    font-size: 10vw;
+    animation-name: fade;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+.BEEFCAKE {
+    opacity: 0;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: red;
+    font-size: 14vw;
+    animation-name: fade;
+    animation-duration: 4s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease;
+}
+
+.display,
+.animation {
+    font-family: 'Orbitron', sans-serif;
+}
+
+#timer h1,
+#set-counter h1 {
     display: inline;
 }
 
-#set-counter h1 {
-    display: inline;
+#userInput {
+    font-family: sans-serif;
+    margin: 20px;
+}
+
+.timer-input label{
+    margin-right: 10px;
+}
+
+#buttons button {
+    margin-right: 10px;
 }
