--- a/index.css
+++ b/index.css
@@ -33,7 +33,6 @@ body {
     font-size: 10vw;
     animation-name: fade;
     animation-duration: 1s;
-    animation-fill-mode: forwards;
 }
 
 .BEEFCAKE {
@@ -46,7 +45,6 @@ body {
     font-size: 14vw;
     animation-name: fade;
     animation-duration: 4s;
-    animation-fill-mode: forwards;
     animation-timing-function: ease;
 }
 
@@ -60,9 +58,34 @@ body {
     display: inline;
 }
 
-#userInput {
+#userInput,
+#timer-name,
+#modal-close,
+#submit-save {
     font-family: sans-serif;
     margin: 20px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 3px solid rgb(61, 61, 61);
+    width: 60%;
+    text-align: center;
 }
 
 .timer-input label{
@@ -71,4 +94,5 @@ body {
 
 #buttons button {
     margin-right: 10px;
+    margin-bottom: 10px;
 }
