--- a/public/index.css
+++ b/public/index.css
@@ -7,8 +7,9 @@
     text-align: center;
     border: 5px solid black;
     padding: 20px;
-    margin: 40px;
+    margin: 0 auto;
     height: 300px;
+    width: 300px;
 }
 
 @keyframes fade {
@@ -85,8 +86,6 @@
     text-align: center;
 }
 
-
-
 .timer-input label{
     margin-right: 10px;
 }
@@ -94,4 +93,27 @@
 #buttons button {
     margin-right: 10px;
     margin-bottom: 10px;
+}
+
+.saved-modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 3px solid rgb(61, 61, 61);
+    width: 60%;
+    text-align: center;
+}
+
+#fetched-timer-container {
+    display: flex;
+    justify-content: center;
+}
+
+.fetched-timer {
+    border: 1px solid black;
+    margin: 5px;
+    padding: 5px;
+    width: fit-content;
+    text-align: center;
+    cursor: pointer;
 }
