--- a/public/index.css
+++ b/public/index.css
@@ -2,14 +2,48 @@
     display: border-box;
 }
 
-#div-container {
+html,
+body {
     position: relative;
-    text-align: center;
+    width: 98%;
+    height: 98%;
+}
+
+#extra-border {
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 800px;
+    height: 800px;
     border: 5px solid black;
+    border-radius: 50%;
+    background-image: url('https://www.atomikclimbingholds.com/content/images/thumbs/0004365_yaniro-poster.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    
+}
+
+#div-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    border-radius: 40%;
     padding: 20px;
     margin: 0 auto;
-    height: 300px;
-    width: 300px;
+    height: 400px;
+    width: 400px;
+    background: rgba(225,225,225, .5);
+}
+
+#real-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
 }
 
 @keyframes fade {
@@ -73,8 +107,6 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,.4);
 }
 
 .modal-content {
