--- a/public/index.css
+++ b/public/index.css
@@ -23,7 +23,7 @@ body {
     height: 800px;
     border: 5px solid black;
     border-radius: 50%;
-    background-image: url('https://www.atomikclimbingholds.com/content/images/thumbs/0004365_yaniro-poster.jpeg');
+    background-image: url('/images/yaniro-flexing.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
